--- a/src/style.scss
+++ b/src/style.scss
@@ -210,6 +210,9 @@ a {
 //   text-align: center;
   z-index:1;
 }
+.article-page header{
+    margin-bottom:0;
+}
 .edit_header {
     display:flex;
     width:100%;
@@ -555,7 +558,7 @@ div#recipes {
 .card{
     background-color: #fff;
     height: $desktopCardHeight;
-    margin-bottom:9rem;
+    margin-bottom:0rem;
     box-sizing:border-box;
 }
 .card .text-area{
@@ -590,14 +593,21 @@ div#recipes {
 .article-header {
     position: relative;
     padding-top:$padding2;
-    height:12rem;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-    justify-content: space-between;
+    height:auto;
+    margin-bottom:1rem;
+
+//    justify-content: space-between;
 }
-.dates {
-    display: inline-block;
+.summary {
+    margin-bottom:2rem;
+}
+.dates{
+   display: grid;
+   width:100%;
+   grid-template-columns: 6fr 6fr;
+}
+date{
+    
     font-family: "Poppins";
     padding: 0;
     color: #000;
@@ -612,6 +622,8 @@ a.cta-update{
     color:$penInk;
     height:auto;
     line-height:normal;
+    position:absolute;
+    right:2.4rem;
 }
 .imageElement {
     width:100%;
@@ -624,6 +636,18 @@ a.cta-update{
     top:0;
     z-index:0;
     opacity:1;
+}
+.photoInfo{
+    display:block;
+    position:absolute;
+    bottom:0;
+    right:0;
+    background:rgba(0,0,0,0.7);
+    color:#fff;
+    font-size:0.857rem;
+}
+.photoInfo a {
+    color:#fff;
 }
 .home-page .imageElement{
     width:100%;
