--- a/src/style.scss
+++ b/src/style.scss
@@ -43,11 +43,29 @@ $looseleaf_red:rgb(161, 43, 43);
 $select-border: #777;
 $select-focus: blue;
 $select-arrow: $select-border;
+
 html {
    // font-size: 62.5%;
   }
-  
-
+  .cross.x{
+    width:100vw;
+    height:33px;
+    top:2.6rem;
+    position: fixed;
+    background-color: rgba(255, 0, 153, 0.4);
+ }
+ .cross.y{
+    width:1px;
+    height:100vh;
+    position: fixed;
+    background-color: rgb(255, 0, 153);
+    left:50%;
+    translate:-50% 0;
+ }
+.cross {
+    display:none;
+    z-index:5;
+}
 @import url('https://fonts.googleapis.com/css2?family=Paytone+One&family=Roboto&family=Monsieur+La+Doulaise&family=Parisienne&display=swap');
 
 
@@ -191,8 +209,15 @@ nav {
     z-index:3;
     padding:1rem;
     background:rgba(255,255,255,0.5);
-    right:2.25rem;
+    right:0;
     background:#eee;
+    width:100%;
+   
+}
+nav ul {
+    width:100%;
+    display:flex;
+    justify-content: center;
 }
 nav a {
     color:#000;
@@ -259,12 +284,26 @@ header{
 .header__title {
     font-weight: 500;
     font-size: 2rem;
-    /* margin-bottom: 0.8rem; */
     text-align: left;
     padding: 2rem;
     font-family: 'Abril Fatface';
 }
-
+.header__title a{
+    color:#000;
+    text-decoration:none;
+    
+}
+.article__title{
+    font-weight: 500;
+    font-size: 2.25rem;
+    text-align: center;
+    width:auto; 
+    padding: 2rem 2rem 0 2rem;
+    position: absolute;
+    left:50%;
+    translate:-50% 0;
+    font-weight: 600;
+}
 .header__subtitle {
   font-size: 1.75rem;
   font-weight: 300;
@@ -449,33 +488,41 @@ button {
     height:40px;
 }
 /*----*/
-.edit-page nav ul,
-.article-page nav ul{
+.header-top {
+    background:#fff;
+    position:relative;
+    z-index:34;
+}
+nav {
+    z-index:2;
+}
+nav.hide{
+    position: absolute;
+    z-index: 3;
+    padding: 1rem;
+    background: rgba(255, 255, 255, 0.5);
+    margin-top:-2rem;
+    opacity:0;
+    right: 0;
+    width:100%;
+    transition: all 0.3s ease-out;
+    display:block;
+}
+nav.open{
+    margin-top:0rem;
+    opacity:1;
+    transition: all 0.3s ease-out;   
+}
+nav ul{
     display: flex;
-    grid-template-columns: 1fr 36fr;
-    grid-column-gap: 1rem;
-    flex-direction: row;
-    justify-content: left;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    gap: 1rem;
+    list-style: none;
 }
 
-.edit-page nav a,
-.article-page nav a{
-    color:#000;
-    background-color:$form-color;
-    display:inline-block;
-    width:40px;
-    height:40px;
-    border:none;
-    text-decoration:none;
-    display:grid;
-    place-content:center;
-    border-radius:12px;
-    &:hover{
-        background-color:$form-color-hover-1;
-    }
-}
-.edit-page nav ul li,
-.article-page nav ul li {
+nav ul li {
     width:auto;
  }
 
@@ -957,7 +1004,14 @@ ul {
 .checklist-container {
     background:#fff;
     z-index:3;
+    width:calc(200% + 2em);
+    transition: all 0.9s;
 }
+.checklist-container.checked{
+    width:100%;
+    transition: all 0.9s;
+}
+
 .shoppinglist-container{
     min-height:12rem;
     border:0;
@@ -966,7 +1020,6 @@ ul {
     transform: translateX(65em);
     left: -65em;
     transition:all 0.9s;
-
 }
 .shoppinglist-container.hide {
     transform: translateX(0em);
@@ -974,6 +1027,9 @@ ul {
     transition: all 0.9s;
     display:block !important;
     opacity:0.8;
+}
+label.article-checklist-items:hover{
+    cursor:pointer;
 }
 .checklist ul,
 .checklist li,
@@ -995,9 +1051,9 @@ ul {
 .checklist-container{
     position: relative;
     border:0px dashed #333;
-    box-shadow: 1px 1px#396684;
+    // box-shadow: 1px 1px#396684;
     padding:1em 2em;
-    box-shadow: inset 0 0 5px rgb(121 123 238);
+    // box-shadow: inset 0 0 5px rgb(121 123 238);
 
 }
 
@@ -1505,6 +1561,7 @@ form#update #ingredients > ul {
         margin-bottom: 0.8rem;
 
     }
+
     .home-page .header__subtitle {
             font-size: 1.75rem;
             line-height: 0.5rem;
@@ -1583,6 +1640,7 @@ form#update #ingredients > ul {
         font-size:3rem;
         margin-bottom:2.4rem;
     }
+
     header select.dropdown{
     width: 100%;
     height: 4rem;
@@ -1648,6 +1706,8 @@ form#update #ingredients > ul {
         grid-template-columns: 1fr;
         
     }
+   
+
     .checklist-container,
     .shoppinglist-container{
         min-height:12rem;
@@ -1664,7 +1724,7 @@ form#update #ingredients > ul {
         display:block !important;
         opacity:0;
     }
-    .shoppinglist-container
+    .shoppinglist-container,
     .checklist input {
         height: auto;
         padding: 0px 0em;
@@ -1683,6 +1743,10 @@ form#update #ingredients > ul {
     .shopping-list{
         padding-left:1.5rem;
     }
+    .shoppinglist-container {
+        border-left:1px solid #000;
+    }
+
     .shopping-list li:last-child{
         margin-bottom:6rem;
     }
